--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<h1>Bé Thương lùn</h1>
-<h2>Bé lùn m48</h2>
-<h3>Hello chú lùn</h3>
-
+<div class="alrazy-title" data-splitting>PMT Coming Soon</div>
 <router-outlet></router-outlet>
