--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,73 +1,39 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:700");
-html, body {
-  background: #DD2911;
-  color: #FFF;
+.carousel-item {
+  height: 100vh;
+  min-height: 350px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+section {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
-html {
-  height: 100%;
-  display: flex;
-}
-
-body {
-  margin: auto;
-}
-
-.alrazy-title {
-  font-family: 'Open Sans', Helvetica, sans-serif;
-  font-weight: 700;
-  font-size: 6vw;
-  font-size: calc( 100vw / var(--char-total) );
-  position: relative;
-  padding: 0.4em 0;
-  overflow: hidden;
-}
-.alrazy-title:after {
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  border-bottom: solid 0.2em;
-  -webkit-animation: underline 1s cubic-bezier(0.8, 0, 0, 1);
-          animation: underline 1s cubic-bezier(0.8, 0, 0, 1);
-  -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
-}
-@-webkit-keyframes underline {
-  from {
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
-  }
-}
-@keyframes underline {
-  from {
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
-  }
-}
-.alrazy-title .word {
+.lnr {
   display: inline-block;
-  -webkit-animation: slide-up 1.25s cubic-bezier(0.5, 0.2, 0, 1);
-          animation: slide-up 1.25s cubic-bezier(0.5, 0.2, 0, 1);
-  -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
-  -webkit-animation-delay: calc( .5s + (.1s * var(--word-index)) );
-          animation-delay: calc( .5s + (.1s * var(--word-index)) );
+  fill: currentColor;
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.05em;
+  stroke-width: 1;
 }
-@-webkit-keyframes slide-up {
-  from {
-    -webkit-transform: translateY(125%);
-            transform: translateY(125%);
-  }
+
+.services-icon {
+  margin-bottom: 20px;
+  font-size: 30px;
 }
-@keyframes slide-up {
-  from {
-    -webkit-transform: translateY(125%);
-            transform: translateY(125%);
-  }
+bgc2, .vLine, .hLine {
+    background-color: #0F52BA;
 }
-.splitting-mark {
-  color: #FFF !important;
+
+.quote-icon {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+.services-icon {
+    font-size: 60px;
+    margin-left: 2rem;
 }
