--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,7 +8,7 @@ footer {
   display: block;
 }
 .footer-logo h3 {
-  color: #9e2499;
+  color: #4267b2;
   text-transform: capitalize;
   margin-top: 10px;
   margin-bottom: 20px;
@@ -18,7 +18,7 @@ footer {
   margin-bottom: 20px;
   font-weight: 600;
   position: relative;
-  color: #9e2499;
+  color: #4267b2;
 }
 .improtent h2::after {
   position: absolute;
@@ -67,7 +67,7 @@ address img {
   background: white;
 }
 #copyright {
-  background: #9e2499;
+  background: #4267b2;
   text-align: center;
 }
 #copyright p {
