--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,56 @@
+<form action="mail.php" method="post">
+  <div class="card border-primary rounded-0">
+    <div class="card-header p-0">
+      <div class="bg-info text-white text-center py-2"  style="background: #4267b2!important">
+        <h3><i class="fa fa-envelope"></i> Giải đáp</h3>
+        <p class="m-0">Mọi thắc mắc xin vui lòng để lại lời nhắn dưới đây</p>
+      </div>
+    </div>
+    <div class="card-body p-3">
+
+      <!--Body-->
+      <div class="form-group">
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
+          </div>
+          <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Tên của bạn" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+          </div>
+          <input type="email" class="form-control" id="nombre" name="email" placeholder="Địa chỉ email" required>
+        </div>
+      </div>
+
+      <div class="form-group">
+          <div class="input-group mb-2">
+            <div class="input-group-prepend">
+              <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+            </div>
+            <input type="email" class="form-control" id="nombre" name="phone" placeholder="Số điện thoại" required>
+          </div>
+        </div>
+
+      <div class="form-group">
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
+          </div>
+          <textarea class="form-control" placeholder="Lời nhắn" required></textarea>
+        </div>
+      </div>
+
+      <div class="text-center">
+        <input type="submit" value="Gửi" class="btn btn-info btn-block rounded-0 py-2"  style="background: red!important">
+      </div>
+    </div>
+
+  </div>
+</form>
 <footer>
   <div class="container">
     <div class="row">
