--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -47,10 +47,17 @@
         </div>
       </div>
 
-      <div class="text-center">
-        <button type="submit" (click)="onSubmit()" class="btn btn-info btn-block rounded-0 py-2"
-          style="background: red!important">Gửi</button>
-      </div>
+      <input accept="image/*" multiple="multiple" id="imgupload" type='file' (change)="onUploadImage($event);"
+        #imageInput style="display:none;" />
+      <button (click)="onBrowser($event)">Chọn ảnh</button>
+      <button (click)="onRemove()">Xóa</button><br><br>
+        <img id="avatar" [src]="url || 'http://placehold.it/200'" alt="your image" (click)="onBrowser($event)" />
+        <br><br>
+
+        <div class="text-center">
+          <button type="submit" (click)="onSubmit()" class="btn btn-info btn-block rounded-0 py-2"
+            style="background: red!important">Gửi</button>
+        </div>
     </div>
 
   </div>
