--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,53 @@
 <app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3">
+        <div class="footer-logo">
+          <img src="/assets/img/logo.png">
+        </div>
+        <!-- <div class="soical-media">
+          <img src="./img/facebook.png">
+          <img src="./img/you-tube.png">
+          <img src="./img/indtrafgram.png">
+          <img src="./img/p.png">
+        </div> -->
+      </div>
+      <div class="col-lg-3">
+        <div class="footer-logo">
+          <img src="/assets/img/mm.png">
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="improtent">
+          <h2>Thông tin liên hệ</h2>
+        </div>
+        <address>
+          <p>Đường Song Hành, Phường An Phú, Quận 2
+            Thành phố Hồ Chí Minh</p>
+
+          <p>fb.com/pg/MMMegaMarketVietnam</p>
+          <p>Gọi: 1800 799988</p>
+        </address>
+        <!-- <div class="fotter-menu">
+          <ul>
+            <li><a href="#">Livraison</a></li>
+            <li><a href="#">Retour </a></li>
+            <li><a href="#">Termes</a></li>
+          </ul>
+        </div> -->
+      </div>
+      <div class="col-lg-3">
+        <div class="improtent">
+          <h2>Địa chỉ</h2>
+        </div>
+        <div class="map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15676.580732231128!2d106.7431605!3d10.8001905!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9477a88ca9026a5f!2sMM+MEGA+MARKET+An+Ph%C3%BA!5e0!3m2!1sen!2s!4v1556775515394!5m2!1sen!2s"
+            width="100%" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
