--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,10 @@
-<form [formGroup]="form">
+<form [formGroup]="form" novalidate>
   <div class="card border-primary rounded-0">
     <div class="card-header p-0">
       <div class="bg-info text-white text-center py-2" style="background: #4267b2!important">
-        <h3><i class="fa fa-envelope"></i> Giải đáp</h3>
-        <p class="m-0">Mọi thắc mắc xin vui lòng để lại lời nhắn dưới đây</p>
+        <h3><i class="fa fa-envelope"></i>ĐĂNG KÝ THAM GIA NGAY!</h3>
+        <p class="m-0">Vui lòng điền đẩy đủ thông tin trước khi đăng ký dự thi, mỗi email chỉ được đăng ký duy nhất 1
+          lần. Ban tổ chức sẽ rà soát nếu không đạt yêu cầu sẽ không được nhận thưởng</p>
       </div>
     </div>
     <div class="card-body p-3">
@@ -51,65 +52,14 @@
         #imageInput style="display:none;" />
       <button (click)="onBrowser($event)">Chọn ảnh</button>
       <button (click)="onRemove()">Xóa</button><br><br>
-        <img id="avatar" [src]="url || 'http://placehold.it/200'" alt="your image" (click)="onBrowser($event)" />
-        <br><br>
+      <img id="avatar" [src]="url || 'http://placehold.it/200'" alt="your image" (click)="onBrowser($event)" />
+      <br><br>
 
-        <div class="text-center">
-          <button type="submit" (click)="onSubmit()" class="btn btn-info btn-block rounded-0 py-2"
-            style="background: red!important">Gửi</button>
-        </div>
+      <div class="text-center">
+        <button type="submit" [disabled]="form.invalid" (click)="onSubmit()" class="btn btn-info btn-block rounded-0 py-2"
+          style="background: red!important">Gửi</button>
+      </div>
     </div>
 
   </div>
 </form>
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-3">
-        <div class="footer-logo">
-          <img src="/assets/img/logo.png">
-        </div>
-        <!-- <div class="soical-media">
-          <img src="./img/facebook.png">
-          <img src="./img/you-tube.png">
-          <img src="./img/indtrafgram.png">
-          <img src="./img/p.png">
-        </div> -->
-      </div>
-      <div class="col-lg-3">
-        <div class="footer-logo">
-          <img src="/assets/img/mm.png">
-        </div>
-      </div>
-      <div class="col-lg-3">
-        <div class="improtent">
-          <h2>Thông tin liên hệ</h2>
-        </div>
-        <address>
-          <p>Đường Song Hành, Phường An Phú, Quận 2
-            Thành phố Hồ Chí Minh</p>
-
-          <p>fb.com/pg/MMMegaMarketVietnam</p>
-          <p>Gọi: 1800 799988</p>
-        </address>
-        <!-- <div class="fotter-menu">
-          <ul>
-            <li><a href="#">Livraison</a></li>
-            <li><a href="#">Retour </a></li>
-            <li><a href="#">Termes</a></li>
-          </ul>
-        </div> -->
-      </div>
-      <div class="col-lg-3">
-        <div class="improtent">
-          <h2>Địa chỉ</h2>
-        </div>
-        <div class="map">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15676.580732231128!2d106.7431605!3d10.8001905!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9477a88ca9026a5f!2sMM+MEGA+MARKET+An+Ph%C3%BA!5e0!3m2!1sen!2s!4v1556775515394!5m2!1sen!2s"
-            width="100%" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
