--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-lg-3">
         <div class="footer-logo">
-          <img src="/assets/img/logo.png">
+          <img src="/assets/img/mm.png">
         </div>
         <!-- <div class="soical-media">
           <img src="./img/facebook.png">
@@ -16,7 +16,7 @@
       </div>
       <div class="col-lg-3">
         <div class="footer-logo">
-          <img src="/assets/img/mm.png">
+          <!-- <img src="/assets/img/mm.png"> -->
         </div>
       </div>
       <div class="col-lg-3">
