--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -96,3 +96,10 @@ address img {
   height: 200px;
   width: 200px;
 }
+
+#loading{
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  z-index: 111;
+}
