--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<!-- <header>
+<header>
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -6,11 +6,15 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
-      <div class="carousel-item active" style="background-image: url('/assets/img/mm1.jpg')">
+      <div class="carousel-item active" style="background-image: url('/assets/img/banner1.png') ;width: 100%;">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
-      <div class="carousel-item" style="background-image: url('/assets/img/mm2.jpg')">
+      <div class="carousel-item" style="background-image: url('/assets/img/banner2.png') ;width: 100%;">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+      <div class="carousel-item" style="background-image: url('/assets/img/mm1.jpg') ;width: 100%;">
         <div class="carousel-caption d-none d-md-block">
         </div>
       </div>
@@ -24,14 +28,14 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-</header> -->
+</header>
 
 <br><br>
 
 <div class="hero">
   <div class="fadeInDown animated">
     <h2 style="color:#fff">Cuộc thi ảnh “Cùng MM chia sẻ câu chuyện mua sắm”</h2>
-    <p style="padding: 50px">Cuộc thi ảnh “Cùng MM chia sẻ câu chuyện mua sắm” sẽ tổng kết lại chiến dịch, tạo sự
+    <p style="padding: 50px">Cuộc thi ảnh “Cùng MM chia sẻ câu chuyện mua sắm” tạo sự
       thảo luận, chia sẻ, tương tác của người dùng trên mạng xã hội về những câu chuyện xung quanh việc mua sắm thường
       ngày của họ.
     </p>
@@ -88,7 +92,7 @@
   <div class="col-md-2">
     <a class="btn btn-lg btn-danger" routerLink="/minigame">Xem luật chơi</a></div>
   <div class="col-md-2">
-      <a class="btn btn-lg btn-primary" routerLink="/dang-ky">Đăng ký ngay</a>
+      <a class="btn btn-lg btn-primary" routerLink="/dang-ky">Chơi ngay, trúng lớn!</a>
   </div>
   <div class="col-md-4"></div>
 </div>
