--- a/src/app/minigame/minigame.component.html
+++ b/src/app/minigame/minigame.component.html
@@ -1,5 +1,4 @@
 <br><br><br>
-
 <div style="text-align: center">
   <img src="/assets/img/banner.jpg" width="100%" alt="">
 </div>
@@ -7,7 +6,7 @@
 <div class="hero">
   <div class="fadeInDown animated">
     <h2 style="color:#fff">Cuộc thi ảnh “Cùng MM chia sẻ câu chuyện mua sắm”</h2>
-    <p style="padding: 50px">Cuộc thi ảnh “Cùng MM chia sẻ câu chuyện mua sắm” sẽ tổng kết lại chiến dịch, tạo sự
+    <p style="padding: 50px">Cuộc thi ảnh “Cùng MM chia sẻ câu chuyện mua sắm” tạo sự
       thảo luận, chia sẻ, tương tác của người dùng trên mạng xã hội về những câu chuyện xung quanh việc mua sắm thường
       ngày của họ.
     </p>
@@ -22,14 +21,84 @@
     </div>
   </div>
 </div>
-<section class="our-blog p-0 m-0 bg-silver">
+<br>
+<hr><br>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h2 style="color:red">CÁCH THỨC THAM GIA</h2>
+    </div>
+    <div class="col-md-1">
+      Bước 1:
+    </div>
+    <div class="col-md-8">
+      <p>Đăng tải hình ảnh và câu chuyện của bạn khi mua sắm tại MM Mega Market. <strong>Nhận mã dự thưởng</strong> được
+        gửi tự động đến
+        gmail của khách hàng. </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-1">
+      Bước 2:
+    </div>
+    <div class="col-md-8">
+      <p>Chia sẻ bài viết về trang Facebook cá nhân ở chế độ công khai kèm theo hashtag <span
+          style="color:blue">#cungMMchiasecauchuyenmuasam</span></p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-1">
+      Bước 3:
+    </div>
+    <div class="col-md-8">
+      <p>Kêu gọi bạn bè cùng tham gia chương trình bằng cách <strong>tag tên 5 bạn bè</strong> vào bài post</p>
+    </div>
+  </div>
+</div>
+<br>
+<hr>
+<br>
+<div class="container" style="background:#f7f7f7">
+  <div class="row" style="text-align:center">
+    <div class="col-md-6" style="color:red;">
+      <h2>CÁCH TRAO GIẢI</h2>
+    </div>
+    <div class="col-md-6" style="color:red;">
+      <h2>GIẢI THƯỞNG</h2>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-md-6">
+      <h4>Bài chia sẻ hợp lệ gồm</h4>
+      <p style="background:ghostwhite">Chia sẻ trực tiếp bài dự thi từ Website về trang Facebook cá nhân. Những
+        bài chia sẻ lại các
+        bài đăng trên trang cá nhân sẽ không được tính điểm.</p>
+      <p>Bài chia sẻ được để chế độ Công khai/Public</p>
+      <p style="background:ghostwhite">1 Hashtag đủ và đúng chính tả: <span
+          style="color:blue">#cungMMchiasecauchuyenmuasam</span></p>
+      <p><small><em>Mỗi tuần và cuối chương trình sẽ random trực tiếp để tìm ra khách hàng may mắn trúng giải thưởng của
+            MM. </em></small></p>
+    </div>
+    <div class="col-md-6">
+      <h4>GIẢI THƯỞNG</h4>
+      <p>Giải thưởng hàng tuần: Voucher mua sắm tại MM trị giá <span style="color:red">2.000.000 đồng</span></p>
+      <p style="background:ghostwhite">Giải thưởng hàng tháng: Voucher mua sắm tại MM trị giá <span
+          style="color:red">5.000.000 đồng</span></p>
+    </div>
+  </div>
+</div>
+<!-- <section class="our-blog p-0 m-0 bg-silver">
   <div class="container work-process  pb-5 pt-5">
     <div class="title mb-5 text-center">
       <h2 style="background:#4267b2; color:#fff!important">Thể lệ cuộc thi</h2>
       <p class="text-muted mb-5 text-center">Hãy cùng tham gia để rinh về các phần thưởng có giá trị cho gia đình bạn
       </p>
     </div>
-    <!-- ============ step 1 =========== -->
     <div class="row">
       <div class="col-md-5">
         <div class="process-box process-left" data-aos="fade-right" data-aos-duration="1000">
@@ -54,7 +123,6 @@
         <div class="process-point-right"></div>
       </div>
     </div>
-    <!-- ============ step 2 =========== -->
     <div class="row">
 
       <div class="col-md-5">
@@ -81,7 +149,6 @@
       </div>
 
     </div>
-    <!-- ============ step 3 =========== -->
     <div class="row">
       <div class="col-md-5">
         <div class="process-box process-left" data-aos="fade-right" data-aos-duration="1000">
@@ -109,13 +176,13 @@
     </div>
 
   </div>
-</section>
+</section> -->
 
 <div class="container">
   <div class="row" style="text-align: center">
     <div class="col-md-12">
-      <a class="btn btn-lg btn-primary" routerLink="/dang-ky">Đăng ký ngay</a>
+      <a class="btn btn-lg btn-primary" routerLink="/dang-ky">Chơi ngay, trúng lớn!</a>
     </div>
   </div>
 </div>
-<br><br>  
+<br><br>
