--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,66 +1,69 @@
 <br><br><br>
-<form [formGroup]="form" novalidate>
-  <div class="card border-primary rounded-0">
-    <div class="card-header p-0">
-      <div class="bg-info text-white text-center py-2" style="background: #4267b2!important">
-        <h3><i class="fa fa-envelope"></i>ĐĂNG KÝ THAM GIA NGAY!</h3>
-        <p class="m-0">Vui lòng điền đẩy đủ thông tin trước khi đăng ký dự thi, mỗi email chỉ được đăng ký duy nhất 1
-          lần. Ban tổ chức sẽ rà soát nếu không đạt yêu cầu sẽ không được nhận thưởng</p>
+<div>
+  <form [formGroup]="form" novalidate>
+    <div class="card border-primary rounded-0">
+      <div class="card-header p-0">
+        <div class="bg-info text-white text-center py-2" style="background: #4267b2!important">
+          <h3><i class="fa fa-envelope"></i>ĐĂNG KÝ THAM GIA NGAY!</h3>
+          <p class="m-0">Vui lòng điền đẩy đủ thông tin trước khi đăng ký dự thi, mỗi email chỉ được đăng ký duy nhất 1
+            lần. Ban tổ chức sẽ rà soát nếu không đạt yêu cầu sẽ không được nhận thưởng</p>
+        </div>
       </div>
+      <div class="card-body p-3">
+  
+        <!--Body-->
+        <div class="form-group">
+          <div class="input-group mb-2">
+            <div class="input-group-prepend">
+              <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
+            </div>
+            <input formControlName="name" type="text" class="form-control" id="nombre" name="nombre"
+              placeholder="Tên của bạn" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="input-group mb-2">
+            <div class="input-group-prepend">
+              <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+            </div>
+            <input formControlName="email" type="email" class="form-control" id="nombre" name="email"
+              placeholder="Địa chỉ email" required>
+          </div>
+        </div>
+  
+        <div class="form-group">
+          <div class="input-group mb-2">
+            <div class="input-group-prepend">
+              <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+            </div>
+            <input formControlName="phone" type="text" class="form-control" id="nombre" name="phone"
+              placeholder="Số điện thoại" required>
+          </div>
+        </div>
+  
+        <div class="form-group">
+          <div class="input-group mb-2">
+            <div class="input-group-prepend">
+              <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
+            </div>
+            <textarea formControlName="note" class="form-control" placeholder="Lời nhắn" required></textarea>
+          </div>
+        </div>
+  
+        <input accept="image/*" multiple="multiple" id="imgupload" type='file' (change)="onUploadImage($event);"
+          #imageInput style="display:none;" />
+        <button (click)="onBrowser($event)">Chọn ảnh</button>
+        <button (click)="onRemove()">Xóa</button><br><br>
+        <img id="avatar" [src]="url || 'http://placehold.it/200'" alt="your image" (click)="onBrowser($event)" />
+        <br><br>
+  
+        <div class="text-center">
+          <button type="submit" [disabled]="form.invalid" (click)="onSubmit()" class="btn btn-info btn-block rounded-0 py-2"
+            style="background: red!important">Gửi</button>
+        </div>
+      </div>
+  
     </div>
-    <div class="card-body p-3">
-
-      <!--Body-->
-      <div class="form-group">
-        <div class="input-group mb-2">
-          <div class="input-group-prepend">
-            <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
-          </div>
-          <input formControlName="name" type="text" class="form-control" id="nombre" name="nombre"
-            placeholder="Tên của bạn" required>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="input-group mb-2">
-          <div class="input-group-prepend">
-            <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
-          </div>
-          <input formControlName="email" type="email" class="form-control" id="nombre" name="email"
-            placeholder="Địa chỉ email" required>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="input-group mb-2">
-          <div class="input-group-prepend">
-            <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
-          </div>
-          <input formControlName="phone" type="text" class="form-control" id="nombre" name="phone"
-            placeholder="Số điện thoại" required>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="input-group mb-2">
-          <div class="input-group-prepend">
-            <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
-          </div>
-          <textarea formControlName="note" class="form-control" placeholder="Lời nhắn" required></textarea>
-        </div>
-      </div>
-
-      <input accept="image/*" multiple="multiple" id="imgupload" type='file' (change)="onUploadImage($event);"
-        #imageInput style="display:none;" />
-      <button (click)="onBrowser($event)">Chọn ảnh</button>
-      <button (click)="onRemove()">Xóa</button><br><br>
-      <img id="avatar" [src]="url || 'http://placehold.it/200'" alt="your image" (click)="onBrowser($event)" />
-      <br><br>
-
-      <div class="text-center">
-        <button type="submit" [disabled]="form.invalid" (click)="onSubmit()" class="btn btn-info btn-block rounded-0 py-2"
-          style="background: red!important">Gửi</button>
-      </div>
-    </div>
-
-  </div>
-</form>
+  </form>
+  
+</div>
