--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,8 +26,8 @@
             <div class="input-group-prepend">
               <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
             </div>
-            <input formControlName="email" type="email" class="form-control" id="nombre" name="email"
-              placeholder="Địa chỉ email" required>
+            <input formControlName="lucky_number" type="text" class="form-control" id="nombre" name="number"
+              placeholder="Con số may mắn" required>
           </div>
         </div>
   
