--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -112,7 +112,7 @@
           <div class="card-body">
             <h5 class="card-title">{{customer.name}}</h5>
             <p class="card-text">{{customer.note}}</p>
-            <p><small><strong>Mã dự thưởng:</strong> <span style="color:red"> {{customer.voucher}}</span></small></p>
+            <p><small><strong>Mã dự thưởng:</strong> <span style="color:red"> {{customer.lucky_number}}</span></small></p>
             <fb-like [url]="customer.img"></fb-like>
           </div>
         </div>
