--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Chương trình ưu đãi</a>
+          <a class="nav-link" routerLink="/chuong-trinh-khuyen-mai">Chương trình ưu đãi</a>
         </li>
       </ul>
     </div>
