--- a/src/app/promotions/promotions.component.html
+++ b/src/app/promotions/promotions.component.html
@@ -1,9 +1,48 @@
-<br><br>
-<p>
-  Mm mega market- hàng tươi, giá rẻ mỗi ngày
-  Giá sốc mỗi ngày- đại lễ khuyến mãi
-  Phát nước miễn phí: cùng mm mega market mang niềm vui giữa ngày hè oi bức 😘
-  Thanh ngọt ngày lễ với ưu đãi, rau củ, quả tươi mát
-  Giá sốc mỗi ngày, mua sắm đầy tay
-  Ai sẽ là vận động viên làm rạng danh đại diện tphcm mm mega market? 
-</p>
+<section class="main">
+  <div class="container mt-4">
+    <h1 class="text-center mb-4 p-4 text-secondary" style="background: #4267b2; color:#fff!important">Chương trình đang diễn ra</h1>
+    <div class="row">
+
+      <div class="card-columns">
+
+        <div class="card shadow border-0">
+          <img class="card-img-top" src="/assets/img/hang-tuoi.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Mm mega market- hàng tươi, giá rẻ mỗi ngày</h5>
+          </div>
+        </div>
+        <div class="card shadow border-0">
+          <img class="card-img-top" src="/assets/img/dai-le.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Giá sốc mỗi ngày- đại lễ khuyến mãi</h5>
+          </div>
+        </div>
+        <div class="card shadow border-0">
+          <img class="card-img-top" src="/assets/img/phat-nuoc.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Phát nước miễn phí: cùng mm mega market mang niềm vui giữa ngày hè oi bức 😘</h5>
+          </div>
+        </div>
+        <div class="card shadow border-0">
+          <img class="card-img-top" src="/assets/img/rau-cu.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Thanh ngọt ngày lễ với ưu đãi, rau củ, quả tươi mát</h5>
+          </div>
+        </div>
+        <div class="card shadow border-0">
+          <img class="card-img-top" src="/assets/img/gia-soc.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Giá sốc mỗi ngày, mua sắm đầy tay</h5>
+          </div>
+        </div>
+        <div class="card shadow border-0">
+          <img class="card-img-top" src="/assets/img/xe-dap.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Ai sẽ là vận động viên làm rạng danh đại diện tphcm mm mega market? 
+            </h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
