--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container">
-    <!-- <a class="navbar-brand" href="#"><img src="/assets/img/logo.png" width="100px" alt=""></a> -->
+    <a class="navbar-brand" href="#"><img src="/assets/img/mm.png" width="50px" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
       aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,8 +12,17 @@
             <span class="sr-only">(current)</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/chuong-trinh-khuyen-mai">Chương trình ưu đãi</a>
+        <li class="nav-item" style="margin-right: 10px">
+          <a class="nav-link" routerLink="/chuong-trinh-khuyen-mai">Ưu đãi mỗi tuần</a>
+        </li>
+        <li class="nav-item logo">
+          <img src="/assets/img/fb-logo.png" width="25px" alt="">
+        </li>
+        <li class="nav-item logo">
+          <img src="/assets/img/g-logo.png" width="25px" alt="">
+        </li>
+        <li class="nav-item logo">
+          <img src="/assets/img/youtube-logo.png" width="25px" alt="">
         </li>
       </ul>
     </div>
